--- a/flask-server/Dockerfile
+++ b/flask-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-alpine3.15
 WORKDIR /app
 
-COPY . /app/
+COPY *.py requirements.txt /app/
 RUN pip install -r requirements.txt
 
 EXPOSE 5000
